# monomer_featurizer_predictor

./: Density.pkl  Density_no_xtb.pkl  Glass transition temperature.pkl  Glass transition temperature_no_xtb.pkl  LICENSE  MANIFEST.in  Melting temperature.pkl  Melting temperature_no_xtb.pkl  README.md  Thermal decomposition temperature.pkl  Thermal decomposition temperature_no_xtb.pkl  environment.linux.yml  environment.windows.yml  monomer_featurizer_predictor.py  pyproject.toml  requirements.linux.txt  requirements.windows.txt
monomer_featurizer_predictor/: Density_no_xtb.pkl  Melting temperature.pkl  Melting temperature_no_xtb.pkl  __init__.py  monomer_featurizer_predictor.py
